# animation-toolkit

./: .gitignore  CMakeLists.txt  README.md  update.sh
assignments/: CMakeLists.txt
assignments/a0-start/: CMakeLists.txt  Readme.md  sphere2d.cpp  sphere3d.cpp
assignments/a1-hello/: CMakeLists.txt  Readme.md  circles.cpp  eyes.cpp  look.cpp  particles.cpp  unique.cpp
assignments/a10-ik/: CMakeLists.txt  Readme.md  cyclops.h  dancer.cpp  ik_controller.cpp  ik_controller.h  ikviewer.cpp  looker.cpp  unique.cpp
assignments/a11-steering/: CMakeLists.txt  Readme.md  behaviors-basecode.cpp  behaviors.h  behaviorviewer.cpp  behaviorviewer.h  obstacle.h  steerable-basecode.cpp  steerable.cpp  steerable.h  steeringdemo.cpp  steeringdemo.h  world.cpp  world.h
assignments/a2-interpolation/: CMakeLists.txt  Readme.md  drawcurve.cpp  gradient.cpp  particlecubic.cpp  screensaver.cpp  unique.cpp
assignments/a3-splines/: CMakeLists.txt  Readme.md  curve_editor.cpp  curve_editor.h  interpolator.cpp  interpolator.h  interpolator_catmullrom.h  interpolator_hermite.h  interpolator_linear.h  spline.cpp  spline.h  test_catmullrom.cpp  test_hermite.cpp  test_linear.cpp  test_spline.cpp  unique.cpp
assignments/a4-euler/: CMakeLists.txt  Readme.md  teapots.cpp  teapots.h  test_euler.cpp  unique.cpp
assignments/a5-quat/: CMakeLists.txt  Readme.md  test_quat.cpp  test_quat_mat.cpp  unique.cpp
assignments/a6-transform/: CMakeLists.txt  Readme.md  boxes.cpp  skeleton_practice.cpp  slerp_teapot.cpp  tentacle.cpp  test_slerp.cpp  unique.cpp
assignments/a7-motion/: CMakeLists.txt  Readme.md  butterfly.cpp  devil.h  motion_practice.cpp  motion_viewer.cpp  squirrel.cpp  thriller.cpp  unique.cpp
assignments/a8-blend/: CMakeLists.txt  Readme.md  blend.cpp  reorient.cpp  splice.cpp  unique.cpp  zombie_arms.cpp
assignments/a9-fade/: CMakeLists.txt  Readme.md  controller.cpp  crossfade.cpp  twolink.cpp  unique.cpp
classexamples/: CMakeLists.txt  week01-circularMotion.cpp  week01-linearMotion.cpp  week01-oscillatingMotion.cpp  week02-colorLerp.cpp  week02-drawline.cpp  week03-hermiteEx.cpp  week03-solveEqn.cpp  week09-butterfly.cpp  week09-drawskeleton.cpp  week10-butterfly.cpp
libsrc/: CMakeLists.txt
libsrc/agl/: CMakeLists.txt  agl.h  aglm.cpp  aglm.h  camera.cpp  camera.h  image.cpp  image.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  window.cpp  window.h
libsrc/agl/mesh/: CPPLINT.cfg  line_mesh.cpp  line_mesh.h  point_mesh.cpp  point_mesh.h  skybox.cpp  skybox.h  triangle_mesh.cpp  triangle_mesh.h
libsrc/atk/: bvhreader.cpp  glmmath.h  math.h  motion.cpp  motion.h  pose.cpp  pose.h  skeleton.cpp  skeleton.h
libsrc/atkmath/: CMakeLists.txt  constants.h  matrix3-basecode.cpp  matrix3.cpp  matrix3.h  quaternion-basecode.cpp  quaternion.cpp  quaternion.h  test_utils.h  vector3.cpp  vector3.h
libsrc/atkui/: CMakeLists.txt  framework.cpp  framework.h  skeleton_drawer.h
motions/: orca.bvh
motions/Beta/: Beta.bvh  back_flip_to_uppercut.bvh  gangnam_style.bvh  idle.bvh  jump.bvh  left_strafe.bvh  left_strafe_walking.bvh  left_turn_90.bvh  right_strafe.bvh  right_strafe_walking.bvh  right_turn_90.bvh  samba_dancing.bvh  skinning_test.bvh  standard_run.bvh  walking.bvh
motions/Mia/: acknowledging.bvh  gesture.bvh  idle.bvh  sitToStand.bvh  sitting.bvh  standToSit.bvh  talking.bvh
motions/Nikki/Session1/: 120_Nikki_FastWalk.bvh  120_Nikki_FastWalk.csv  120_Nikki_MedWalk.ann  120_Nikki_MedWalk.bvh  120_Nikki_MedWalk.csv  120_Nikki_MedWalk_Trim.bvh  120_Nikki_SlowWalk.ann  120_Nikki_SlowWalk.bvh  120_Nikki_SlowWalk.csv  120_Nikki_SlowWalk_Trim.bvh  120_Nikki_TPose.bvh  TestForces.m
motions/Nikki/Session2/: 120_Nikki.TestStanding1.ann  120_Nikki.TestStanding1.bvh  120_Nikki.TestStanding2.bvh  120_Nikki.TestStanding3.ann  120_Nikki.TestStanding3.bvh  120_Nikki_Jump1_Cal18.ann  120_Nikki_Jump1_Cal18.bvh  120_Nikki_Jump1_Cal18.csv  120_Nikki_Jump2_Cal19.ann  120_Nikki_Jump2_Cal19.bvh  120_Nikki_Jump2_Cal19.csv  120_Nikki_Jump2_Cal20.ann  120_Nikki_JumpForward_Cal20.bvh  120_Nikki_JumpForward_Cal20.csv  120_Nikki_Standing_Cal12.ann  120_Nikki_Standing_Cal12.bvh  120_Nikki_Standing_Cal12.csv  120_Nikki_TPose.bvh  120_Take_001.bvh  Lower_Nikki.Nikki_Cal_12.bvh  Lower_Nikki.Nikki_Cal_20.bvh  Lower_Nikki.TestStanding1.bvh  Nikki.ASF  Nikki.Nikki Cal 12 Lower.amc  Nikki.Nikki Cal 12.amc  Nikki.Nikki Cal 12.ann  Nikki.Nikki Cal 18.amc  Nikki.Nikki Cal 18.ann  Nikki.Nikki Cal 19.AMC  Nikki.Nikki Cal 19.ann  Nikki.Nikki Cal 20.amc  (+17 more)
motions/SignLanguage/: SIB01-story01-bvh.bvh
motions/SignLanguage-2020/: I3Ddemo.m  README.txt  bruno-animate.m  bruno-test.m  compute-3d.m  cubicLeastSquares.m  eda.m  smoothAllTrajectories.m  smoothSplineTrajectories.m  splineFit.m  summaryStats.m  test_lsnonlin.m  to3D.m
motions/Style/: 120_05_EDIT_LOOP.ann  120_05_EDIT_LOOP.bvh  120_06_EDIT_LOOP.ann  120_07_EDIT_LOOP.ann  120_08_EDIT_LOOP.ann  120_08_EDIT_LOOP.bvh  120_09_EDIT_LOOP.ann  120_09_EDIT_LOOP.bvh  120_10_EDIT_LOOP.ann  120_10_EDIT_LOOP.bvh  120_11_EDIT_LOOP.ann  120_11_EDIT_LOOP.bvh  120_12_EDIT_LOOP.ann  120_12_EDIT_LOOP.bvh  120_13_EDIT_LOOP.ann  120_13_EDIT_LOOP.bvh  120_14_EDIT_LOOP.ann  120_14_EDIT_LOOP.bvh  120_15_EDIT_LOOP.ann  120_15_EDIT_LOOP.bvh  120_16_EDIT_LOOP.ann  120_16_EDIT_LOOP.bvh  120_17_EDIT_LOOP.ann  120_17_EDIT_LOOP.bvh  120_18_EDIT_LOOP.ann  120_18_EDIT_LOOP.bvh  120_19_EDIT_LOOP.ann  120_19_EDIT_LOOP.bvh  120_21_EDIT_LOOP.ann  120_21_EDIT_LOOP.bvh  120_22_EDIT_LOOP.ann  120_22_EDIT_LOOP.bvh  137_02_EDIT_LOOP.ann  137_02_EDIT_LOOP.bvh  137_06_EDIT_LOOP.ann  137_06_EDIT_LOOP.bvh  137_07_EDIT_LOOP.ann  137_07_EDIT_LOOP.bvh  137_08_EDIT_LOOP.ann  137_08_EDIT_LOOP.bvh  (+75 more)
motions/Warrok/: WarrokIdle.bvh  WarrokRawr.bvh  WarrokRun.bvh  WarrokSlap.bvh  WarrokThriller.bvh
shaders/: billboard.fs  billboard.vs  cubemap.fs  cubemap.vs  floor.fs  floor.vs  gouraud.frag  gouraud.vert  lines.vs  normals.fs  normals.vs  phong.frag  phong.fs  phong.vert  phong.vs  refract.fs  shadertoy.vs  shadertoy_fragCoord.fs  shadertoy_raymarch_csg.fs  skin.vs  unlit.frag  unlit.fs  unlit.vert  unlit.vs
