add_executable(a1-eyes eyes.cpp)
target_link_libraries(a1-eyes ${LIBS})

add_executable(a1-look look.cpp)
target_link_libraries(a1-look ${LIBS})

add_executable(a1-particles particles.cpp)
target_link_libraries(a1-particles ${LIBS})

add_executable(a1-circles circles.cpp)
target_link_libraries(a1-circles ${LIBS})

add_executable(a1-unique unique.cpp)
target_link_libraries(a1-unique ${LIBS})
