add_executable(a7-butterfly butterfly.cpp)
target_link_libraries(a7-butterfly ${LIBS})

add_executable(a7-thriller thriller.cpp)
target_link_libraries(a7-thriller ${LIBS})

add_executable(a7-motion-viewer motion_viewer.cpp)
target_link_libraries(a7-motion-viewer ${LIBS})

add_executable(a7-motion-practice motion_practice.cpp)
target_link_libraries(a7-motion-practice ${LIBS})

add_executable(a7-squirrel squirrel.cpp)
target_link_libraries(a7-squirrel ${LIBS})

add_executable(a7-unique unique.cpp)
target_link_libraries(a7-unique ${LIBS})
